[package]
name = "Sidekick"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
rand = "0.8.5"
regex = "1.11.1"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

